[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-hmac"
version = "1.1.0"
description = "A python package that creates and verifies HMAC signatures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Garreth Cain", email = "garrethccain@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/garrethcain/easy-hmac/"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_hmac"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.flake8]
ignore = "E203,E266,E501,W503,F401,E231"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.mypy]
files = "."
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
build_command = "uv build"
commit_parser = "conventional"
hvcs = "github"
branch = "master"
commit_message = "chore(release): {version}"

[dependency-groups]
dev = [
  "twine>=6.0",
  "flake8>=7.0",
  "mypy>=1.0",
  "mypy-extensions>=1.0",
  "ruff>=0.8",
  "pre-commit>=4.0",
  "build>=1.0",
  "pytest>=9.0.3",
  "python-semantic-release>=9.0",
]
