[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-hmac"
version = "1.2.1"
description = "A python package that creates and verifies HMAC signatures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Garreth Cain", email = "garrethccain@gmail.com" }]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/garrethcain/easy-hmac/"


[tool.hatch.build.targets.wheel]
packages = ["src/easy_hmac"]

[tool.mypy]
files = "."
ignore_missing_imports = true

[tool.semantic_release]
version_variables = ["src/easy_hmac/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version}"
commit_parser = "conventional"
hvcs = "github"


[dependency-groups]
dev = [
  "mypy>=1.0",
  "mypy-extensions>=1.0",
  "ruff>=0.8",
  "pre-commit>=4.0",
  "pytest>=9.0.3",
  "python-semantic-release>=9.0",
]
