[metadata]
name = easy-hmac
version = 0.0.1
description = A python package that creates and verifies HMAC signatures
long_description = file: README.rst
url = https://github.com/garrethcain/easy-hmac/
author = Garreth Cain
author_email = garrethccain@gmail.com
license = AGPL-3
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
